--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@expo/webpack-config": "0.17.0",
     "@react-native-community/slider": "4.2.3",
     "@react-navigation/material-bottom-tabs": "^6.2.3",
-    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
     "@react-navigation/stack": "^6.2.3",
     "expo": "~46.0.9",
+    "expo-av": "~12.0.4",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dice-roll": "^1.2.2",
@@ -22,7 +24,9 @@
     "react-native": "0.69.5",
     "react-native-gesture-handler": "^2.6.0",
     "react-native-paper": "^4.12.4",
-    "react-native-safe-area-context": "^4.3.3",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-sound": "^0.11.2",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
